syntax = "proto3";

option go_package = "./pb";

package gserver;

// 心跳包请求
message HeartBeatReq {
  int64 timestamp = 1; // 请求方的时间戳(毫秒)
}

// 心跳包回复
message HeartBeatRes {
  int64 requestTimestamp = 1; // 请求方的时间戳(毫秒)
  int64 responseTimestamp = 2;// 回复方的时间戳(毫秒)
}

// 通用的错误返回消息
message ErrorRes {
  int32 command = 1; // 消息号
  int32 resultId = 2; // 错误信息id
  string resultStr = 3; // 错误信息内容
}

// 网关转发客户端消息到其他服务器,发生错误
message GateRouteClientPacketError {
  int64 playerId = 1;
  int32 command = 2; // 消息号
  int32 resultId = 3; // 错误信息id
  string resultStr = 4; // 错误信息内容
}
