syntax = "proto3";

option go_package = "./pb";

import "google/protobuf/any.proto";

package gserver;

// 玩家基础信息
message BaseInfo {
  int32 gender = 1; // 性别
  int32 level = 2; // 等级
  int32 exp = 3; // 经验值
  int32 totalPay = 4; // 累充总额
  int32 lastUpdateDate = 5; // 上次刷新日期,格式:yyyymmdd
  int64 lastLoginTimestamp = 6; // 最近一次登录时间戳
  int64 lastLogoutTimestamp = 7; // 最近一次退出时间戳
  int32 totalOnlineSeconds = 8; // 总在线时长(秒)
}

// 玩家的钱财数据
message Money {
  int32 coin = 1; // 金币
  int32 diamond = 2; // 钻石
}

// 背包模块数据
message BagSaveData {
  map<int32,int32> CountItem = 1;
  map<int64,bytes> UniqueItem = 2;
  map<int64,bytes> Equip = 3;
}

// 任务模块数据
message QuestSaveData {
  map<int32,bytes> finished = 1; // 已完成的任务
  map<int32,bytes> quests = 2; // 进行中的任务
}

// 任务数据
message QuestData {
  int32 cfgId = 1; // 配置id
  int32 progress = 2; // 进度
  int32 activityId = 3; // 活动id,只有活动子任务才会有值
}

// 已完成的任务
message FinishedQuestData {
  int32 timestamp = 1; // 完成时间戳(秒)
}

// 玩家身上的公会数据
message PlayerGuildData {
  int64 guildId = 1; // 公会id
}

// 玩家在mongo中的保存格式
// 用于一次性把玩家数据加载进来
message PlayerData {
  int64 _id = 1; // 玩家id
  string Name = 2; // 玩家名
  int64 AccountId = 3; // 账号id
  int32 RegionId = 4; // 区服id
  BaseInfo BaseInfo = 5;
  bytes Money = 6;
  BagSaveData Bags = 7;
  QuestSaveData Quest = 8;
  PlayerGuildData Guild = 9;
  map<int64,bytes> PendingMessages = 10; // map<int64,*PendingMessage>
  map<int32,bytes> Activities = 11; // map<int32,*ActivityDefaultBaseData>
  map<int32,bytes> Exchange = 12; // map<int32,*ExchangeRecord>
}

// 默认活动模板的基础数据
message ActivityDefaultBaseData {
  int32 LastUpdateTime = 1; // 刷新时间戳
  int32 JoinTime = 4; // 参加活动的时间(时间戳)
  map<string,int32> PropertiesInt32 = 5; // 动态属性(int32)
  //map<string,int64> PropertiesInt64 = 6; // 动态属性(int64)
}

// 待处理消息
message PendingMessage {
  int64 messageId = 1; // 唯一id
  int32 packetCommand = 2; // 消息号
  google.protobuf.Any packetData = 3; // 消息内容
  int32 timestamp = 4; // 时间戳
}

// 兑换记录
message ExchangeRecord {
  int32 CfgId = 1;
  int32 Count = 2;
  int32 Timestamp = 3; // 最近一次兑换的时间戳(秒)
}
